--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.6.0
 Django==4.2.1
-Pillow==9.5.0
+gunicorn==22.0.0
+packaging==24.0
+pillow==10.3.0
 python-dotenv==1.0.1
 sqlparse==0.4.4
 tzdata==2023.3
